# Trade

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  testnet-smoke.yml
configs/strategies/: ema_cross.yaml
configs/venues/: binance.yaml  kraken.yaml
docs/: ARCHITECTURE.md  PROMOTION.md  RUNBOOK.md  index.md  testnet_smoke.md
docs/adr/: 0001-src-layout.md
infra/: alert_rules.yml  alertmanager.yml  prometheus.yml
infra/grafana/: dashboard.json
nautilus_trade/: __init__.py  catalog.py  config.py
nautilus_trade/actors/: __init__.py  feed_health.py  regime_filter.py
nautilus_trade/adapters/: __init__.py  binance_instruments.py  binance_snapshot.py  instrument_mapping.py  kraken_auth.py  kraken_config.py  kraken_instruments.py  kraken_snapshot.py  snapshot_types.py  venue_registry.py  venue_snapshot.py
nautilus_trade/backtest/: node.py  report.py
nautilus_trade/data/: __init__.py  loader.py
nautilus_trade/execution/: __init__.py  gateway.py
nautilus_trade/live/: __init__.py  factories.py  flatten.py  node.py  portfolio_snapshot.py  reconciler.py  runtime.py
nautilus_trade/live/actors/: __init__.py  fill_tracker.py  reconciliation.py
nautilus_trade/ops/: __init__.py  alerts.py  circuit_breaker.py  event_store.py  kill_switch.py  logging_setup.py  metrics.py  order_timing.py
nautilus_trade/portfolio/: __init__.py  fx.py  pnl.py  stats.py
nautilus_trade/risk/: __init__.py  engine.py
nautilus_trade/strategies/: base.py  ema_cross.py
runs/testnet_smoke/: MANUAL_OPS.md  PREFLIGHT.md  README.md  evidence.template.md  evidence_BLOCKED.md
scripts/: eventstore_utils.py  evidence_parser.py  flatten_all.py  kill_switch.py  load_catalog.py  promote_strategy.py  run_backtest.py  run_live.py  setup_dev.sh  smoke_testnet.py  soak_status.py
src/nautilus_trade/: __init__.py  catalog.py  config.py  config_loader.py  logging.py
src/nautilus_trade/actors/: regime_filter.py
src/nautilus_trade/adapters/: binance_config.py
src/nautilus_trade/backtest/: __init__.py  node.py
src/nautilus_trade/cli/: __init__.py  main.py
src/nautilus_trade/data/: feeds.py
src/nautilus_trade/execution/: gateway.py
src/nautilus_trade/live/: node.py
src/nautilus_trade/ops/: __init__.py  alerts.py  circuit_breaker.py  doctor.py  event_store.py  promotion.py
src/nautilus_trade/risk/: engine.py
src/nautilus_trade/strategies/: __init__.py  base.py  ema_cross.py
tests/: conftest.py  test_binance_instruments.py  test_data_loader.py  test_evidence_parser.py  test_exit_guarded.py  test_feed_health.py  test_fill_tracker.py  test_fill_tracker_actor.py  test_gateway.py  test_kill_switch.py  test_kraken_auth.py  test_kraken_instruments.py  test_kraken_snapshot.py  test_live_node.py  test_live_wiring.py  test_logging_setup.py  test_oms_enforcement.py  test_order_timing.py  test_portfolio_fx.py  test_portfolio_stats.py  test_reconciler.py  test_reconciliation_actor.py  test_regime_filter.py  test_risk.py  test_runtime.py  test_smoke_testnet.py  test_soak_status.py  test_staging_env.py  test_strategies.py  test_strategy_gateway_contract.py  test_venue_registry.py
tests/fixtures/evidence/: evidence_PASS.md
tests/fixtures/smoke/: events_smoke.jsonl
tests/integration/: test_cli.py
tests/unit/: test_config_loader.py  test_promotion.py  test_reconciler.py  test_risk.py  test_strategies.py
