[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "nautilus-trade"
version = "0.2.0"
description = "Production NautilusTrader trading system with layered risk, reconciliation, and observability"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Taylor Dean", email = "taylorboonedean@gmail.com" }]
keywords = ["trading", "quant", "nautilustrader", "algorithmic-trading", "crypto", "backtest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    # Core trading engine
    "nautilus_trader>=1.206.0",
    # Config / env
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Data
    "pandas>=2.0",
    "pyarrow>=14.0",
    # Observability
    "prometheus-client>=0.20",
    "structlog>=24.0",
    # Alerting
    "httpx>=0.27",
    "slack-sdk>=3.0",
    # Scheduling / async
    "anyio>=4.0",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "pre-commit>=3.7",
    "pip-audit>=2.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/TylrDn/Trade"
Repository = "https://github.com/TylrDn/Trade"
Issues = "https://github.com/TylrDn/Trade/issues"
Changelog = "https://github.com/TylrDn/Trade/blob/main/CHANGELOG.md"

[project.scripts]
trade = "nautilus_trade.cli.main:app"

# ── Hatch build config ───────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/nautilus_trade"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "configs", "docs", "README.md", "LICENSE", "CHANGELOG.md"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
    "B",               # bugbear
    "C4",              # comprehensions
    "SIM",             # simplify
    "RUF",             # ruff-specific
    "PL",              # pylint subset
    "PT",              # pytest style
    "TID",             # tidy imports
    "ARG",             # unused args
    "PIE",
    "PGH",             # no blanket noqa
]
ignore = [
    "PLR0913",         # too many args (config-heavy)
    "PLR2004",         # magic values (thresholds are meaningful)
    "E501",            # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004", "S101", "SLF001"]
"scripts/**/*.py" = ["T201"]
# Typer requires typer.Option() in defaults; CLI uses lazy imports.
"src/nautilus_trade/cli/**/*.py" = ["B008", "PLC0415", "ARG001"]
# The risk engine keeps side/portfolio-notional args so callers can
# pass them uniformly, even though the current implementation ignores them.
"src/nautilus_trade/risk/engine.py" = ["ARG002"]
# Nautilus subclasses have permissive typing; scoped ignores are noisy.
"src/nautilus_trade/strategies/**/*.py" = ["PGH003"]

[tool.ruff.lint.isort]
known-first-party = ["nautilus_trade"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
files = ["src/nautilus_trade"]

[[tool.mypy.overrides]]
module = [
    "nautilus_trader.*",
    "slack_sdk.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: fast unit tests (default)",
    "integration: cross-module integration tests",
    "slow: long-running tests, skipped by default",
    "network: requires network access",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:nautilus_trader.*",
    "ignore::PendingDeprecationWarning",
]

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/nautilus_trade"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
