[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade"
version = "0.1.0"
description = "Production NautilusTrader trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core trading engine
    "nautilus_trader>=1.206.0",
    # Config / env
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # Data
    "pandas>=2.0",
    "pyarrow>=14.0",
    # Observability
    "prometheus-client>=0.20",
    "structlog>=24.0",
    # Alerting
    "httpx>=0.27",
    "slack-sdk>=3.0",
    # Scheduling / async
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live composition tests requiring nautilus_trader",
    "staging: fail-closed safety tests requiring TRADE_ENV=staging",
]

[tool.hatch.build.targets.wheel]
packages = ["nautilus_trade"]
